# sec-cynagora

./: .gitignore  .gitreview  CC-BY-SA-3.0  CHANGELOG  CMakeLists.txt  CREDITS.md  LICENSES.md  README.md  agent.md  cynagora.initial  cynara.initial  meson.build  meson_options.txt  metapkg.txt  mkbuild.sh  protocol.md  sample
compat/: CMakeLists.txt  meson.build
compat/include/: CMakeLists.txt  meson.build
compat/include/cynara/: cynara-agent.h  cynara-creds-commons.h  cynara-creds-dbus.h  cynara-creds-gdbus.h  cynara-monitor.h
compat/pkgconfig/: CMakeLists.txt  cynara-compat.pc.in  link-to-cynara-compat.pc  meson.build
compat/src/: CMakeLists.txt  lib-compat.c  main-test-old-cynara.c  meson.build
config/: CMakeLists.txt  basic  cynagora.conf.in
config/cynagora.d/: CMakeLists.txt  basic  compat-agl  selinux  sysadmin
dox/public/: Doxyfile
include/cynara/: cynara-admin.h  cynara-client-async.h  cynara-client.h  cynara-creds-self.h  cynara-creds-socket.h
pkgconfig/: CMakeLists.txt  cynagora.pc.in  cynara.pc.in  link.pc  meson.build
src/: .gitignore  CMakeLists.txt  Makefile  agent-at.c  agent-at.h  anydb.c  anydb.h  cache.c  cache.h  cyn-protocol.c  cyn-protocol.h  cyn-server.c  cyn-server.h  cyn.c  cyn.h  cynagora-protocol.txt  cynagora.c  cynagora.h  data.h  db-import.c  db-import.h  db.c  db.h  dbinit.c  dbinit.h  expire.c  expire.h  export-cynagora.map  export-cynara-client.map  export-cynara-compat.map  export-cynara-core.map  export.map  fbuf-sysfile.c  fbuf-sysfile.h  fbuf.c  fbuf.h  fdb.c  fdb.h  filedb.c  filedb.h  (+34 more)
systemd/: CMakeLists.txt  cynagora-admin.socket.in  cynagora-agent.socket.in  cynagora-check.socket.in  cynagora-setup.service.in  cynagora.service  cynagora.service.in  cynagora.target  cynara-admin.socket.in  cynara-agent.socket.in  cynara-check.socket.in  cynara.service  meson.build
systemd/sockets.target.wants/: cynagora-admin.socket  cynagora-agent.socket  cynagora-check.socket  cynara-check.socket
tests/: CMakeLists.txt  stress-cache.sh
tests/t-settings/: CMakeLists.txt  test-settings.c  test-settings.sh
