
install(FILES basic DESTINATION ${DEFAULT_INIT_DIR})
if(ADD_AGL_RULES)
  install(FILES compat-agl DESTINATION ${DEFAULT_INIT_DIR})
endif()
if(ADD_SELINUX_RULES)
  install(FILES selinux DESTINATION ${DEFAULT_INIT_DIR})
endif()
if(ADD_SYSADMIN_RULES)
  install(FILES sysadmin DESTINATION ${DEFAULT_INIT_DIR})
endif()
